--- a/.github/workflows/action.yaml
+++ b/.github/workflows/action.yaml
@@ -1,38 +1,38 @@
-name: GitHub Actions Pytests
-
-on: push
-
+# This is a basic workflow to help you get started with Actions
+name: CI
+# Controls when the workflow will run
+on: [push]
+# A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
+  # This workflow contains a single job called "build"
   build:
+    # The type of runner that the job will run on
     runs-on: ubuntu-latest
-    
     strategy:
       matrix:
-        node: [3.6,3.8]
-
+        #python-versions: [3.6, 3.8, 3.9]
+        node-version: [12.21]
+    # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
-      - name: checkout
-        uses: actions/checkout@v2
-
-      - name: setup
-        uses: actions/setup-python@v2
+      - uses: actions/checkout@v2
+      
+      - name: Use Node.js ${{ matrix.node-version }}
+        uses: actions/setup-node@v1
         with:
-          # The Node.js version to configure
-          python-version: ${{ matrix.node }}
-
-      - name: black-check@master
-        uses: RojerGS/python-black-check@master
-
+          node-version: ${{ matrix.node-version }}
+      
       - name: Install dependencies
         run: |
-          python -m pip install --upgrade pip
-          pip install pytest
-          if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
-      
-      - name: Lint with black
-        run: |
-          pip install black
-      
-      - name: Running pytests
-        run: |
-          pytest demo_pytest/test_my_awesome_module.py
+          npm install
+          npm install -g @angular/cli
+      #FFFFFFFFFFFFFFFFFFFFFFF
+      - name: Configure AWS Credentials
+        uses: aws-actions/configure-aws-credentials@v1
+        with:
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          # aws-session-token: ${{ secrets.AWS_SESSION_TOKEN }} # if you have/need it
+          aws-region: eu-west-1
+
+      - name: build-ng
+        run: ng build
